Fix double scrollbar in Firefox, Brave

--- a/client/public/index.css
+++ b/client/public/index.css
@@ -12,7 +12,7 @@ html, body {
 
 body {
   font-family: "Poppins", sans-serif;
-  margin-top: 0;
+  margin: 0;
 }
 
 a,
